doc: added docs for recomment
